# openswarm-builder

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adapters/skill/: SKILL.md
deploy/: HERMES_HOSTS.md  VPS_RUNBOOK.md
deploy/openswarm-chat/: index.html
deploy/systemd/: openswarm-builder-api.service
openswarm_builder/: __init__.py  cli.py  service.py
openswarm_builder/adapters/: client.py  http_server.py  mcp_server.py
openswarm_builder/builder_swarm/: api_researcher.py  proposal_synthesizer.py  requirements_analyst.py  specialist_planner.py  swarm_architect.py  tool_architect.py
openswarm_builder/core/: approval_gate.py  design_loop.py  materialize.py  paths.py  swarm_spec.py  validators.py
openswarm_builder/core/fleet/: fleet.py  http_client.py  ports.py  registry.py
openswarm_builder/integrations/hermes/: README.md  tools.py
templates/agent_scaffold/: __init__.py  instructions.md  tools.py
templates/claude_code_agent/: __init__.py  instructions.md  tools.py
templates/codex_agent/: __init__.py  instructions.md  tools.py
tests/: conftest.py  test_builder.py  test_http.py  test_materialize.py
