[project]
name = "openswarm-builder"
version = "0.1.0"
description = "Standalone OpenSwarm Agent Builder — design loop, approval gate, fleet materialization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
openswarm-builder = "openswarm_builder.cli:main"
openswarm-builder-mcp = "openswarm_builder.adapters.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openswarm_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
